  - Explicitly global code declarations yield errors if syntactically
    malformed.
  - Default code declarations are silently ignored if syntactically
    malformed.
Minor INCOMPATIBILITY.

* Clarified and standardized internal data bookkeeping of code
declarations: history of serials allows to track potentially
non-monotonous declarations appropriately. Minor INCOMPATIBILITY.


*** HOL ***

* SMT module:
  - A new option, 'smt_nat_as_int', has been added to translate 'nat' to
    'int' and benefit from the SMT solver's theory reasoning. It is
    disabled by default.
  - The legacy module "src/HOL/Library/Old_SMT.thy" has been removed.
  - Several small issues have been rectified in the 'smt' command.

* (Co)datatype package: The 'size_gen_o_map' lemma is no longer
generated for datatypes with type class annotations. As a result, the
tactic that derives it no longer fails on nested datatypes. Slight
INCOMPATIBILITY.

* Command and antiquotation "value" with modified default strategy:
terms without free variables are always evaluated using plain evaluation
only, with no fallback on normalization by evaluation. Minor
INCOMPATIBILITY.

* Theories "GCD" and "Binomial" are already included in "Main" (instead
of "Complex_Main").

* Constant "surj" is a full input/output abbreviation (again).
Minor INCOMPATIBILITY.

* Dropped aliasses RangeP, DomainP for Rangep, Domainp respectively.
INCOMPATIBILITY.

* Renamed ii to imaginary_unit in order to free up ii as a variable
name. The syntax \<i> remains available. INCOMPATIBILITY.

* Dropped abbreviations transP, antisymP, single_valuedP; use constants
transp, antisymp, single_valuedp instead. INCOMPATIBILITY.

* Constant "subseq" in Topological_Spaces has been removed -- it is
subsumed by "strict_mono". Some basic lemmas specific to "subseq" have
been renamed accordingly, e.g. "subseq_o" -> "strict_mono_o" etc.

* Theory List: "sublist" renamed to "nths" in analogy with "nth", and